# s3-compatible-api

./: .gitignore  README.md  main.py  pyproject.toml
src/: decorators.py  logger.py
src/common/storage/: __init__.py  exceptions.py  models.py
src/common/storage/fs/: __init__.py
src/models/: bucket_files_list.py  bucket_list.py
src/services/: storage.py
