[tool.poetry]
name = "s3-compatible-api-example"
version = "0.1.0"
description = ""
authors = ["Alexander <aliaksandr.hubin@regula.us>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
pyyaml = "^6.0.1"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
pydantic = "^2.6.1"
pydantic-xml = "2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
